Bug 386454 - Switching between modules doesn't always work
Summary: Switching between modules doesn't always work
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: sidebarview (other bugs)
Version First Reported In: 5.11.2
Platform: Other FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-02 10:14 UTC by groot
Modified: 2017-11-09 20:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description groot 2017-11-02 10:14:40 UTC
w/ current Neon, Plasma 5.11.2, with systemsettings set to panel-mode (the new one, seems to be  default), system language English:

(1) start systemsettings
(2) click search box, type "mouse" 
(3)  click on "desktop behavior" in left pane -- desktop effects tab appears 
(4) click on  "input devices" in left pane -- no change, "desktop behavior" still looks selected 
(5) click "applications" in left pane, new panel shows w/ application launch feedback tab, 
(6) click "input devices" again, now "mouse controls" shows 

After some more testing, it seems like this *only* happens when switching from "Desktop Behaior" to "Input Devices"; can't reproduce with any other pair of modules listed under the search for "mouse".
Comment 1 Marco Martin 2017-11-02 14:27:50 UTC
Git commit fbdcf8022d923af462c1ff532af5ac819d2028af by Marco Martin.
Committed on 02/11/2017 at 14:27.
Pushed by mart into branch 'master'.

map rows to the source model

before comparing new and old row, map the new one to the source model

M  +7    -3    sidebar/SidebarMode.cpp

https://commits.kde.org/systemsettings/fbdcf8022d923af462c1ff532af5ac819d2028af
Comment 2 Marco Martin 2017-11-02 14:28:20 UTC
Git commit 5ece4a6d3c8a179a460126b91d16aa356b49257f by Marco Martin.
Committed on 02/11/2017 at 14:28.
Pushed by mart into branch 'Plasma/5.11'.

map rows to the source model

before comparing new and old row, map the new one to the source model

M  +7    -3    sidebar/SidebarMode.cpp

https://commits.kde.org/systemsettings/5ece4a6d3c8a179a460126b91d16aa356b49257f