map rows to the source model

before comparing new and old row, map the new one to the source model

BUG:386454